LU-5912 libcfs: add i_mutex locking around fsync calls

Add appropriate locking around our direct use of filp->f_op->fsync()
routines.  Not doing so was a long term violation of the locking
protocols described in Documentation/filesystems/Locking in linux
source but was never noticed until new checking code went into the
RHEL 6.6 kernel.  The new check triggered a visible error in syslog.

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: I551215fc340637364fe04f6e3bae963cf983c953